--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,23 +1,24 @@
-{% set name = "aiounittest" %}
 {% set version = "1.4.2" %}
 
 package:
-  name: {{ name }}
+  name: aiounittest
   version: {{ version }}
 
 source:
-  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/aiounittest-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/a/aiounittest/aiounittest-{{ version }}.tar.gz
   sha256: 1478ec8013c70046569cdc76d541083ca7da362e6513cf29c7ecb51330229bdb
 
 build:
   number: 1
   noarch: python
-  script: {{ PYTHON }} -m pip install . -vv
+  script:
+    - {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation --disable-pip-version-check
 
 requirements:
   host:
     - pip
     - python {{ python_min }}
+    - setuptools
   run:
     - python >={{ python_min }}
     - wrapt
